--- a/i18n/ru/docusaurus-plugin-content-docs/current/develop/ethereum-polygon/pos/using-sdk/erc1155.md
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/develop/ethereum-polygon/pos/using-sdk/erc1155.md
@@ -1,43 +1,43 @@
 ---
 id: erc1155
-title: ERC1155 Deposit and Withdraw Guide
+title: Руководство по депозиту и выводу ERC1155
 sidebar_label: ERC1155
-description: Build your next blockchain app on Polygon.
+description: "Депозит и вывод токенов ERC1155 в сети Polygon."
 keywords:
   - docs
   - matic
 image: https://matic.network/banners/matic-network-16x9.png
 ---
 
-Check the latest [Matic.js documentation for ERC1155](https://maticnetwork.github.io/matic.js/docs/pos/erc1155/).
+Ознакомьтесь с актуальной документацией по [Matic.js для ERC1155](https://maticnetwork.github.io/matic.js/docs/pos/erc1155/).
 
-This tutorial uses the Polygon Testnet ( Mumbai ) which is mapped to the Goerli Network to demonstrate the asset transfer to and fro the two blockchains. An **important thing to be noted** while following this tutorial is that you should always use a Proxy address whenever it is available. For eg. The **RootChainManagerProxy** address has to be used for interaction instead of the **RootChainManager** address. The **PoS contract addresses, ABI, Test Token Addresses** and other deployment details of the PoS bridge contracts can be found [here](/docs/develop/ethereum-polygon/pos/deployment).
+Это руководство использует тестовую сеть Polygon ( Mumbai ), которая сопоставлена с сетью Goerli, для демонстрации перевода активов между двумя блокчейнами. **Важно отметить, что** при следовании указаниям настоящего руководства следует использовать адрес прокси всегда, когда это возможно. Например, адрес **RootChainManagerProxy** следует использовать для взаимодействия вместо адреса **RootChainManager**. **Адреса контрактов PoS, ABI, адреса тестовых токенов** и другие детали развертывания контрактов моста PoS можно найти [здесь](/docs/develop/ethereum-polygon/pos/deployment).
 
-**Mapping your assets** is necessary to integrate the PoS bridge on your application. You can submit a mapping request [here](/docs/develop/ethereum-polygon/submit-mapping-request). But for the purpose of this tutorial, we have already deployed the **Test tokens** and Mapped then on the PoS bridge. You may need it for trying out the tutorial on your own. You can request the desired Asset from the [faucet](https://faucet.polygon.technology/). If the test tokens are unavailable on the faucet, do reach us on [discord](https://discord.com/invite/0xPolygon)
+**Сопоставление активов** необходимо для интеграции моста PoS в ваше приложение. Вы можете отправить запрос на сопоставление [здесь](/docs/develop/ethereum-polygon/submit-mapping-request). Однако для целей настоящего руководства мы уже развернули **тестовые токены** и выполнили их сопоставление на мосту PoS. Это может вам потребоваться, если вы захотите попробовать выполнить указания руководства самостоятельно. Вы можете запросить желаемый актив из [faucet](https://faucet.polygon.technology/). Если тестовые токены недоступны на faucet, свяжитесь с нами в [discord](https://discord.com/invite/0xPolygon)
 
-In the upcoming tutorial, every step will be explained in detail along with a few code snippets. However, you can always refer to this [repository](https://github.com/maticnetwork/matic.js/tree/master/examples/pos) which will have all the **example source code** that can help you to integrate and understand the working of PoS bridge.
+В будущем руководстве каждый шаг будет разъяснен подробно с предоставлением нескольких сниппетов кода. Однако вы всегда сможете сослаться на этот [репозиторий](https://github.com/maticnetwork/matic.js/tree/master/examples/pos), который будет содержать все **примеры исходного кода**, которые могут помочь вам выполнить интеграцию и понять принципы работы моста PoS.
 
-## High Level Flow
+## Поток высокого уровня {#high-level-flow}
 
-Deposit ERC1155 -
+Внесите депозит ERC1155 -
 
-1. **_Approve_** **_ERC1155Predicate_** contract to spend the tokens that have to be deposited.
-2. Make **_depositFor_** call on **_RootChainManager_**.
+1. **_Утвердите контракт_** **_ERC1155Predicate_** для получения возможности тратить вносимые токены.
+2. Выполните вызов **_depositFor_** в **_RootChainManager_**.
 
-Withdraw ERC1155 -
+Выведите ERC1155 -
 
-1. **_Burn_** tokens on Polygon chain.
-2. Call **_exit_** function on **_RootChainManager_** to submit proof of burn transaction. This call can be made **_after checkpoint_** is submitted for the block containing burn transaction.
+1. **_Сожгите_** токены в Polygon chain.
+2. Вызовите функцию **_exit_** в **_RootChainManager_** для отправки подтверждения транзакции сжигания. Этот вызов можно сделать **_после отправки checkpoint_** для блока, содержащего транзакцию сжигания.
 
-## Step Details
+## Детали шага {#step-details}
 
 ---
 
-### approveALL
+### approveALL {#approveall}
 
-[approveAll method](https://maticnetwork.github.io/matic.js/docs/pos/erc1155/approve-all/)
+[Метод approveAll](https://maticnetwork.github.io/matic.js/docs/pos/erc1155/approve-all/)
 
-This is a normal ERC1155 approval so that `ERC1155Predicate` can call `transferFrom` function. The Polygon `POSClient` exposes the [`approveERC1155ForDeposit`](https://github.com/maticnetwork/matic.js/blob/4bf4fa9438d56c9b5c282f456aa2c24f6ff6083d/src/index.ts#L231) method to make this call.
+Это нормальное утверждение ERC1155, позволяющее `ERC1155Predicate` вызвать функцию `transferFrom`. Polygon `POSClient` открывает метод [`approveERC1155ForDeposit`](https://github.com/maticnetwork/matic.js/blob/4bf4fa9438d56c9b5c282f456aa2c24f6ff6083d/src/index.ts#L231) для выполнения этого вызова.
 
 ```jsx
 const erc1155RootToken = posClient.erc1155(<root token address>,true);
@@ -47,9 +47,9 @@ const txReceipt = await approveResult.getReceipt();
 
 ```
 
-### Deposit
+### Депозит {#deposit}
 
-[Deposit method](https://maticnetwork.github.io/matic.js/docs/pos/erc1155/deposit/) can be done by calling `depositFor` on the `RootChainManager` contract. Note that token needs to be mapped and approved for transfer beforehand. Once tokens are transferred deposit proceeds using **_StateSync_** mechanism. The Polygon `POSClient` exposes the [`depositSingleERC1155ForUser`](https://github.com/maticnetwork/matic.js/blob/4bf4fa9438d56c9b5c282f456aa2c24f6ff6083d/src/index.ts#L245) & [`depositBatchERC1155ForUser`](https://github.com/maticnetwork/matic.js/blob/4bf4fa9438d56c9b5c282f456aa2c24f6ff6083d/src/index.ts#L259) methods to make this call.
+[Метод депозита](https://maticnetwork.github.io/matic.js/docs/pos/erc1155/deposit/) можно выполнить, вызвав `depositFor` для контракта `RootChainManager`. Обратите внимание, что необходимо выполнить сопоставление и утверждение токена для передачи заранее. После передачи токенов процедура депозита продолжается с использованием механизма **_StateSync_**. Polygon `POSClient` открывает методы [`depositSingleERC1155ForUser`](https://github.com/maticnetwork/matic.js/blob/4bf4fa9438d56c9b5c282f456aa2c24f6ff6083d/src/index.ts#L245) и [`depositBatchERC1155ForUser`](https://github.com/maticnetwork/matic.js/blob/4bf4fa9438d56c9b5c282f456aa2c24f6ff6083d/src/index.ts#L259) для выполнения этого вызова.
 
 ```jsx
 const erc1155RootToken = posClient.erc1155(<root token address>, true);
@@ -65,13 +65,13 @@ const txHash = await result.getTransactionHash();
 const txReceipt = await result.getReceipt();
 ```
 
-The `deposit` function of `ChildToken` is called by the `ChildChainManager`. Tokens should be minted when this call is made.
+Функция `deposit` в `ChildToken` вызывается `ChildChainManager`. При выполнении этого вызова минтинг токенов должен быть выполнен.
 
-> NOTE: Deposits from Ethereum to Polygon happen using a state sync mechanism and takes about ~5-7 minutes. After waiting for this time interval, it is recommended to check the balance using web3.js/matic.js library or using Metamask. The explorer will show the balance only if at least one asset transfer has happened on the child chain. This [link](/docs/develop/ethereum-polygon/pos/deposit-withdraw-event-pos) explains how to track the deposit events.
+> ПРИМЕЧАНИЕ. Депозиты из Ethereum в Polygon выполняются с использованием механизма синхронизации состояния, и это занимает примерно ~5-7 минут. После ожидания в течение этого временного интервала рекомендуется проверить баланс с помощью библиотеки web3.js/matic.js или Metamask. Баланс будет показан в обозревателе, только если в дочерней цепочке была выполнена только одна передача активов. По этой [ссылке](/docs/develop/ethereum-polygon/pos/deposit-withdraw-event-pos) вы узнаете, как отслеживать события депозита.
 
-### Burn
+### Сжигание {#burn}
 
-User can call the `withdraw` function of `ChildToken` contract. This function should burn the tokens. The Polygon `POSClient` exposes the `burnSingleERC1155` & `burnBatchERC1155` methods to make this call.
+Пользователь может вызвать функцию `withdraw` контракта `ChildToken`. Эта функция должна сжечь токены. Polygon `POSClient` открывает методы `burnSingleERC1155` и `burnBatchERC1155` для выполнения этого вызова.
 
 ```jsx
 const erc1155Token = posClient.erc1155(<child token address>);
@@ -80,11 +80,12 @@ const txHash = await result.getTransactionHash();
 const txReceipt = await result.getReceipt();
 ```
 
-**Store the transaction hash for this call and use it while generating burn proof.**
+**Сохраните хэш транзакции для этого вызова и используйте его при генерировании доказательства сжигания.**
 
-### Exit
+### Выход {#exit}
 
-[WithdrawExit method](https://maticnetwork.github.io/matic.js/docs/pos/erc1155/withdraw-exit/) Once the `checkpoint` has been **_submitted_** for the block containing burn transaction, a user should call the `exit` function of the `RootChainManager` contract and submit the proof of burn. Upon submitting valid proof tokens are transferred to the user. Polygon POS client exposes `exitBatchERC1155` & `exitSingleERC1155` method to make this call. This function can be called only after the checkpoint is included in the main chain. The checkpoint inclusion can be tracked by following this [guide](/docs/develop/ethereum-polygon/pos/deposit-withdraw-event-pos#checkpoint-events).
+[Метод WithdrawExit](https://maticnetwork.github.io/matic.js/docs/pos/erc1155/withdraw-exit/)
+ После того, как `checkpoint` будет **_отправлено_** для блока, содержащего транзакцию сжигания, пользователь должен вызвать функцию `exit` контракта `RootChainManager` и отправить доказательство сжигания. После отправки корректного доказательства токены передаются пользователю. Клиент Polygon POS открывает методы `exitBatchERC1155` и `exitSingleERC1155` для выполнения этого вызова. Эту функцию можно вызвать только после включения checkpoint в основную цепочку. Включение контрольной точки можно отследить с помощью этого [руководства](/docs/develop/ethereum-polygon/pos/deposit-withdraw-event-pos#checkpoint-events).
 
 ```jsx
 const erc1155RootToken = posClient.erc1155(<root token address>, true);
